@@ -5,8 +5,6 @@ import com.gregtechceu.gtceu.api.gui.widget.EnumSelectorWidget;
 import com.gregtechceu.gtceu.api.mui.value.sync.PanelSyncManager;
 import com.gregtechceu.gtceu.api.recipe.GTRecipeType;
 import com.gregtechceu.gtceu.api.recipe.content.Content;
-import com.gregtechceu.gtceu.api.recipe.lookup.GTRecipeLookup;
-import com.gregtechceu.gtceu.api.recipe.lookup.ingredient.MapIngredientTypeManager;
 import com.gregtechceu.gtceu.client.mui.screen.ModularPanel;
 import com.gregtechceu.gtceu.common.data.GTRecipeTypes;
 import com.gregtechceu.gtceu.utils.ItemStackHashStrategy;
@@ -21,7 +19,7 @@ import net.minecraft.world.item.ItemStack;
 
 import it.unimi.dsi.fastutil.objects.Object2IntOpenCustomHashMap;
 
-import java.util.List;
+import java.util.Collections;
 import java.util.function.Consumer;
 
 public class SmartItemFilter implements ItemFilter {
@@ -108,10 +106,11 @@ public class SmartItemFilter implements ItemFilter {
 
     private int lookup(ItemStack itemStack) {
         ItemStack copy = itemStack.copyWithCount(Integer.MAX_VALUE);
-        var ingredients = MapIngredientTypeManager.getFrom(copy, ItemRecipeCapability.CAP);
-        var recipe = filterMode.lookup.recurseIngredientTreeFindRecipe(List.of(ingredients),
-                filterMode.lookup.getLookup(), r -> true);
-        if (recipe == null) return 0;
+        var recipe = filterMode.recipeType.db()
+                .find(Collections.singletonMap(ItemRecipeCapability.CAP, Collections.singletonList(copy)), r -> true);
+        if (recipe == null) {
+            return 0;
+        }
         for (Content content : recipe.getInputContents(ItemRecipeCapability.CAP)) {
             var stacks = ItemRecipeCapability.CAP.of(content.getContent()).getItems();
             for (var stack : stacks) {
@@ -139,13 +138,13 @@ public class SmartItemFilter implements ItemFilter {
 
         private static final SmartFilteringMode[] VALUES = values();
         private final String localeName;
-        private final GTRecipeLookup lookup;
+        private final GTRecipeType recipeType;
         private final Object2IntOpenCustomHashMap<ItemStack> cache = new Object2IntOpenCustomHashMap<>(
                 ItemStackHashStrategy.comparingAllButCount());
 
         SmartFilteringMode(String localeName, GTRecipeType type) {
             this.localeName = localeName;
-            this.lookup = type.getLookup();
+            this.recipeType = type;
         }
 
         @Override
